fixed footer on small devices

--- a/src/main/resources/static/css/masthead.css
+++ b/src/main/resources/static/css/masthead.css
@@ -28,3 +28,6 @@ p.lead {
 .landing {
     padding: 40px;
 }
+body {
+  overflow-x:hidden;
+}
